--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 mongoUrl = "mongodb+srv://Becky1703:QM9IH46IRunLPC86@cluster0.1uz9ltq.mongodb.net/noteApp?retryWrites=true&w=majority"
 PORT = 4000
+JWT_SECRET = "Becky1703"
