--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest", 
+    "test": "jest",
     "server": "nodemon index.js",
     "type": "module"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -26,7 +24,9 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "chai": "^5.0.0",
     "jest": "^29.7.0",
+    "mocha": "^10.2.0",
     "nock": "^13.4.0",
     "supertest": "^6.3.3"
   },
